--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,76 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="background">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="phones">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="context">
 
-  &copy; 2014 Instagram
+      <div class="appimage">
+        <img src="images/brand.png" alt="Brand image">
+      </div>
+
+      <button type="button" name="button">
+        <img src="images/home.png" alt="Log In">
+        <p>Log In</p>
+      </button>
+
+      <div class="whitebackground">
+
+        <img src="images/frame.png" alt="white frame">
+
+        <div class="justtext">
+
+          <h3 class="text">Capture and Share <br> the World's Moments</h3>
+
+          <br>
+
+          <p class="text">Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          Oh yeah, did we mention it's free?
+
+          </p>
+
+        </div>
+
+        <div class="download">
+          <img src="images/badge-iphone.png" alt="iphone download">
+          <img src="images/badge-android.png" alt="android">
+        </div>
+
+      </div> <!-- CLOSES WHITEBACKGROUND-->
+
+    </div> <!-- CLOSES CONTEXT -->
+
+  </div>
+
+  <footer>
+    <nav>
+      <ul>
+        <li> About Us </li>
+        <li> Support </li>
+        <li> Blog </li>
+        <li> Press </li>
+        <li> API </li>
+        <li> Jobs </li>
+        <li> Privacy </li>
+        <li> Terms </li>
+        <li> Copyright 2014 Instagram </li>
+      </ul>
+    </nav>
+  </footer>
+
 </body>
 </html>
