--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blueBox">BLUE BOX
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <DIV class="container">
+    <img  class="phone" src="images/phones.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <DIV class="content">
+        <img src="images/brand.png">
 
-  Oh yeah, did we mention it's free?
+        <DIV class="Log-in">
+          <img src="images/home.png">
+          <h1>Instagram</h1>
+        </DIV>
 
-  Download on the App Store
-  Get it on Google Play
+        <DIV class="text-content"
+          <h2>Capture and Share the World's Moments</h2>
+          <ul style="list-style: none;">
+            <li><P>Instagram is a fast, beautiful and fun way to share your life with friends and family.</P></li>
+            <li><P>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</li>
+            <li><P>Oh yeah, did we mention it's free?</li>
+          </ul>
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <NAV>
+          <a href="/html/">About Us</a>
+          <a href="/html/">Support</a>
+          <a href="/html/">Blog</a>
+          <a href="/html/">Press</a>
+          <a href="/html/">API</a>
+          <a href="/html/">Jobss</a>
+          <a href="/html/">Privacy</a>
+          <a href="/html/">Terms</a>
+        </NAV>
+        &copy; 2014 Instagram
+      </DIV>
+    </DIV>
 </body>
 </html>
