--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="phone-col">
+      <img src="images/phones.png" alt="iPhone running Instagram">
+    </div>
+    <div class="main-thing">
+      <header>
+        <h1> <img src="images/brand.png" alt="Instagram"> </h1>
+        <a href="#">
+          <img src="images/home.png" alt="House icon">
+          Log in
+        </a>
+      </header>
 
-  Capture and Share the World's Moments
+      <section>
+        <div>
+          <h2> Capture and Share the World's Moments </h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
 
-  Oh yeah, did we mention it's free?
+          <p> Oh yeah, did we mention it's free? </p>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="GET IT ON Google play">
+      </section>
+    </div>
+    <footer>
+      <ul>
+        <li> <a href="#"> About Us </a> </li>
+        <li> <a href="#"> Support </a> </li>
+        <li> <a href="#"> Blog </a> </li>
+        <li> <a href="#"> Press </a> </li>
+        <li> <a href="#"> API </a> </li>
+        <li> <a href="#"> Jobs </a> </li>
+        <li> <a href="#"> Privacy </a> </li>
+        <li> <a href="#"> Terms </a> </li>
+      </ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p> &copy; 2014 Instagram </p>
+    </footer>
+  </div>
 
-  &copy; 2014 Instagram
+  <div class="blue-bg"></div>
+
 </body>
 </html>
