--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+    <div class="blueContainer">
+        <div class="mainContainer">
+            <div class="leftContainer">
+                <img src="images/phones.png" alt="iphone">
+            </div>
+            <div class="rightContainer">
+                <img class="instagramLogo" src="images/brand.png" alt="brand">
+                <button type="button" name="button">
+          <img src = "images/home.png">
+          <p>Log In </p>
+        </button>
+            </div>
 
-  Capture and Share the World's Moments
+            <img src="images/frame.png">
+            <h3>Capture and Share <br>the World's Moments</h3>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram; it's that easy. You can even share to Facebook, Twitter,
+                Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? </p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
