--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="instagram_cont">
+      <div class="phoneimgs">
+        <img src="images/phones.png">
 
-  Capture and Share the World's Moments
+      </div>
+      <div class="blurb">
+        <div class="brand_login">
+          <img src="images/brand.png">
+          <button type="button" value="Submit"><img src="images/home.png">Log In
+          </button>
+        </div>
+        <div class="content">
+            <h1>Capture and Share<br>the World's Moments</h1>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="appicons">
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+        </div>
+      </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="gray"> &copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
