--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class = "blue-background">
+  </div>
+  <div class = "container-left">
+    <img src = "images/phones.png" class = "phones">
+  </div>
+  <div class = "container-right">
+    <img src = "images/brand.png" class = "brand">
+  <!-- Instagram -->
+  <div class = "login">
+    <img src = "images/home.png" class = "home">
+    <span> Log in </span>
+  </div>
 
-  Capture and Share the World's Moments
+    <img src = "images/frame.png" class = "frame">
+    <div class = "text">
+    <h2>Capture and Share <br /> the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Oh yeah, did we mention it's free?</p>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class = "buttons">
+  <img src = "images/badge-iphone.png">
+  <img src = "images/badge-android.png" class = "android">
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <!-- Download on the App Store -->
+  <!-- Get it on Google Play -->
 
-  &copy; 2014 Instagram
+<nav id = "bottomnav">
+  <a href = "aboutus.html">ABOUT US</a>
+  <a href = "aboutus.html">SUPPORT</a>
+  <a href = "aboutus.html">BLOG</a>
+  <a href = "aboutus.html">PRESS</a>
+  <a href = "aboutus.html">API</a>
+  <a href = "aboutus.html">JOBS</a>
+  <a href = "aboutus.html">PRIVACY</a>
+  <a href = "aboutus.html">TERMS</a>
+</nav>
+
+  <div class = "copyright">
+    &copy; 2014 INSTAGRAM
+  </div>
+</div>
 </body>
 </html>
