fixed the login button a little

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,7 +13,7 @@
       <img class="insta-logo" src="./images/brand.png">
     </div>
     <div class="login">
-      <img src="./images/home.png"> Log In
+      <img class="login-pic" src="./images/home.png"> <span class="login-pic">Log In</span>
     </div>
     <div class="info">
       <div class="white-frame">
