--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="top-section">
+  </div>
+  <img id="phones" src="images/phones.png" />
+  <div id="second-section">
+    <div id="brand-wrapper">
+    <span id="brand"><img id="logo" src="images/brand.png"></span>
+    <a href="https://www.instagram.com/sholpanstarr/">
+      <input type="submit" id="submit" class="icon" value="Log in"/></a>
+</div>
+    <img id="frame-box" src="images/frame.png" />
+    <div id = "text-wrapper">
+    <h2>Capture and Share <br/>
+      the World's Moments</h2>
+      <div class = "text-group">
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+<div id="download-buttons-container">
+<a href="https://itunes.apple.com/app/instagram/id389801252?mt=8"><img id = "iphone-app-download" alt="Download on the App Store" src="images/badge-iphone.png" /></a>
+<a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DunifiedHome%26utm_medium%3Dbadge"><img id = "android-app-download" alt="Get it on Google Play" src="images/badge-android.png" /></a>
+</div>
+</div>
 
-  Capture and Share the World's Moments
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer>
+    <div id="navigation">
+      <ul>
+      <li><a href="https://www.instagram.com/about/us/">About Us</a></li>
+      <li><a href="https://help.instagram.com/">Support</a></li>
+      <li><a href="http://blog.instagram.com/">Blog</a></li>
+      <li><a href="https://www.instagram.com/press/">Press</a></li>
+      <li><a href="https://www.instagram.com/developer/">API</a></li>
+      <li><a href="https://www.instagram.com/about/jobs/">Jobs</a></li>
+      <li><a href="https://help.instagram.com/155833707900388">Privacy</a></li>
+      <li><a href="https://help.instagram.com/478745558852511">Terms</a></li>
+      </ul>
+    </div>
+    <div id="copyright">
+      &copy; 2014 Instagram
+    </div>
+  </footer>
 </body>
 </html>
