streamlined anchor tag selector

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -39,13 +39,13 @@
 
     <div class="bottom-links">
       <a class="bottom-ind" href="https://www.instagram.com/about/us/">About Us</a>
-      <a class="bottom-ind" href="https://help.instagram.com/">Support</a>
-      <a class="bottom-ind" href="http://blog.instagram.com/">Blog</a>
-      <a class="bottom-ind" href="https://www.instagram.com/press/">Press</a>
-      <a class="bottom-ind" href="https://www.instagram.com/developer/">API</a>
-      <a class="bottom-ind" href="https://www.instagram.com/about/jobs/">Jobs</a>
-      <a class="bottom-ind" href="https://www.instagram.com/legal/privacy/">Privacy</a>
-      <a class="bottom-ind" href="https://www.instagram.com/legal/terms/">Terms</a>
+      <a href="https://help.instagram.com/">Support</a>
+      <a href="http://blog.instagram.com/">Blog</a>
+      <a href="https://www.instagram.com/press/">Press</a>
+      <a href="https://www.instagram.com/developer/">API</a>
+      <a href="https://www.instagram.com/about/jobs/">Jobs</a>
+      <a href="https://www.instagram.com/legal/privacy/">Privacy</a>
+      <a href="https://www.instagram.com/legal/terms/">Terms</a>
     </div>
 
     <div class="copyright">
