--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <figure>
+    <img id="phone" src="./images/phones.png" height="450" width="300"/>
+  </figure>
+  <img id="logo" src="./images/brand.png" height="70" width="260"/>
+  </br></br>
+  <img id="frame" src="./images/frame.png" height="400" width="500"/>
 
-  Capture and Share the World's Moments
+<div id="login">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img id="frame" src="./images/home.png" height="20" width="20" <h4> Log In </h4>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</div>
 
-  Oh yeah, did we mention it's free?
+  <div class="mainContainer">
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <h3>Capture and Share </br>the World's Moments</h3>
 
-  &copy; 2014 Instagram
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+</br>
+
+Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</br>
+  </br>Oh yeah, did we mention it's free?</p>
+
+<img src="./images/badge-android.png" height="40" width="120"/>
+<img src="./images/badge-iphone.png" height="40" width="120"/>
+</div>
+</br>
+</br>
+    <div class="footContainer">
+      <nav id="bottomnav">
+        <a href="index.html">About us   </a>
+        <a href="about.html">Support</a>
+        <a href="menu.html">Blog  </a>
+        <a href="contact.html"> Press  </a>
+        <a href="contact.html">API</a>
+        <a href="contact.html">Privacy  </a>
+        <a href="contact.html">Terms  </a>
+&copy; 2014 Instagram
+      </nav>
+      </div>
+
+
 </body>
 </html>
