--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram Page - Clone</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="topArea">
+      <div class="leftSide">
+       <img src="./images/phones.png" >
+      </div>
+      <div class="rightSide">
+         <div class="instaLogo">
+           <img src="./images/brand.png">
+         </div>
+          <form action="https://www.instagram.com/accounts/login/?force_classic_login&hl=en" method="get">
+            <button type="submit"><img class="iconHouse" src="./images/home.png"> Log in</button>
+          </form>
+     <div class="textBox">
+            <div class="header1">
+          <h2>Capture and Share<br/> the World's Moments</h2>
+          </div>
+            <div class="textMain">
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+           </div>
+        <div class="downloadLinks">
+          <a href="https://itunes.apple.com/us/app/instagram/id389801252?mt=8">
+            <img class="appleImg" src="./images/badge-iphone.png">
+          </a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es">
+             <img src="./images/badge-android.png">
+           </a>
+      </div>
+  </div>
+</div>
+</div>
+<footer>
+  <div class="footerMenu">
+    <div class="bottomLinks">
+      <ul>
+      <li><a href="https://www.instagram.com/about/us/">About Us</a></li>
+      <li><a href="https://help.instagram.com/">Support</a></li>
+      <li><a href="http://blog.instagram.com/">Blog</a></li>
+      <li><a href="https://www.instagram.com/press/">Press</a></li>
+      <li><a href="https://www.instagram.com/developer/">API</a></li>
+      <li><a href="https://www.instagram.com/about/jobs/">Jobs</a></li>
+      <li><a href="https://www.instagram.com/legal/privacy/">Privacy</a></li>
+      <li><a href="https://www.instagram.com/legal/terms/">Terms</a></li>
+    </ul>
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class="copyright">
+      &copy; 2017 Instagram
+    </div>
+</footer>
 </body>
 </html>
