--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="description" content="homepage" />
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css"/>
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header id = "blueBg">
+    <nav>
+      <span id = "logo"><a href = "http://www.instagram.com">Instagram Logo here</a></span>
+      <span id = "button"><a href = "http://www.instagram.com">Home</a></span>
+    </nav>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<article>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <aside>iPhone Picture here</aside>
 
-  Oh yeah, did we mention it's free?
+  <section class ="shadowTainer">
+    <h2>Capture and Share the World's Moments</h2>
+    <p>
+      Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+    <br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    </p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <div class = "downloadButt">
+      <a href = "https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.unifiedHome.badge&mt=8">Download on the App Store</a>
+      <a href = "https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DunifiedHome%26utm_medium%3Dbadge">Get it on Google Play</a>
+    </div>
+  </section>
+</article>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <a href = "https://www.instagram.com/about/us/">About Us</a>
+    <a href = "https://help.instagram.com/">Support</a>
+    <a href = "http://blog.instagram.com/">Blog</a>
+    <a href = "https://www.instagram.com/press/">Press</a>
+    <a href = "https://www.instagram.com/developer/">API</a>
+    <a href = "https://www.instagram.com/about/jobs/">Jobs</a>
+    <a href = "https://www.instagram.com/legal/privacy/">Privacy</a>
+    <a href = "https://www.instagram.com/legal/terms/">Terms</a>
+    <span id ="dontCopy">&copy; 2014 Instagram</span>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
