--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href='css/main.css' rel="stylesheet" type="text/css"/>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="topBanner">
+    <img class='instLogo' src="images/brand.png" alt=""/>
+<!--    <img class='homeLogo' src="images/home.png" alt=""/>   -->
+<!--      <img class='theFrame' src="images/frame.png" alt=""/>   -->
 
-  Capture and Share the World's Moments
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="textBox">
+    <h2 class="mainTitle">
+      Capture and Share the World's Moments
+    </h2>
+    <p class="pInTxtBox">
+      Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+    </p>
+    <p class="pInTxtBox">
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    </p>
+    <p class="pInTxtBox">
+      Oh yeah, did we mention it's free?
+    </p>
+  </div>
+  <div class="storePic">
+    <div class="buttonmargin">
+      <img class='button' src="images/badge-iphone.png" alt=""/>
+      <img class='button' src="images/badge-android.png" alt=""/>
+    </div>
+  </div>
+  <img class="phonePic" src="images/phones.png" alt=""/>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+<!--  Download on the App Store
+  Get it on Google Play  -->
+  <p class="footNote">
   About Us
   Support
   Blog
@@ -25,7 +45,11 @@
   Jobs
   Privacy
   Terms
-
+  </p>
+  <p class="cRight">
   &copy; 2014 Instagram
+  </p>
+
+
 </body>
 </html>
