--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+    <div id="top-section">
+        <div class="phones">
+            <img src="images/phones.png">
+        </div>
+        <div class="brand">
+            <img src="images/brand.png" alt="Instagram">
+            <div class="log-in">
+                <img src="images/home.png" alt="home key">
+                <span class="img-txt">Log In</span>
+            </div>
+        </div>
+        <div class="right-container">
+            <div class="info">
+                <h2>Capture and Share the World's Moments</h2>
+                <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+            </div>
+            <div class="logos">
+                <img src="images/badge-iphone.png" alt="Download on the App Store">
+                <img src="images/badge-android.png" alt="Get it on Google Play"><br>
+            </div>
+        </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <div class="bottom-links">
+            <a href="https://www.instagram.com/about/us/">About Us</a>
+            <a href="https://help.instagram.com/">Support</a>
+            <a href="http://blog.instagram.com/">Blog</a>
+            <a href="https://www.instagram.com/press/">Press</a>
+            <a href="https://www.instagram.com/developer/">API</a>
+            <a href="https://www.instagram.com/about/jobs/">Jobs</a>
+            <a href="https://www.instagram.com/legal/privacy/">Privacy</a>
+            <a href="https://www.instagram.com/legal/terms/">Terms</a>
+            <span class="copyright">&copy; 2014 Instagram</span>
+        </div>
+    </div>
 </body>
+
 </html>
