--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="first-box">
+    <span>
+      <img class="phones" src="/Users/Sandra/Desktop/prework/java-riffs/lab-css-instagram-clone-master/starter-code/images/phones.png" alt=""/>
+    </span>
+    <span>
+      <img class="brand-instagram"src="/Users/Sandra/Desktop/prework/java-riffs/lab-css-instagram-clone-master/starter-code/images/brand.png">
+    </span>
+    <span class="button">
+      <img class="image-home" src="/Users/Sandra/Desktop/prework/java-riffs/lab-css-instagram-clone-master/starter-code/images/home.png"/>
+    <span class="log-in">Log in</span>
+    </span>
+  </div>
+  <div>
+    <figure class="image-frame">
+      <img src="/Users/Sandra/Desktop/prework/java-riffs/lab-css-instagram-clone-master/starter-code/images/frame.png" />
+    </figure>
+    <span class="text-over-image">
+      <h2>Capture and Share<br> the World's Moments</h2>
 
-  Capture and Share the World's Moments
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life,<br>
+             with friends and family.<br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Take a picture or video, choose a filter to transform its look<br>
+         and feel, then post to Instagram &mdash; it's that easy. You can<br>
+         even share to Facebook, Twitter, Tumblr and more. It's a<br>
+         new way to see the world.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Oh yeah, did we mention it's free?<br>
+        </p>
+    </span>
+  </div>
+  <div class="badge">
+    <figure>
+      <img class="badge-iphone" src="/Users/Sandra/Desktop/prework/java-riffs/lab-css-instagram-clone-master/starter-code/images/badge-iphone.png" />
+      <img class="badge-android" src="/Users/Sandra/Desktop/prework/java-riffs/lab-css-instagram-clone-master/starter-code/images/badge-android.png" />
+    </figure>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="menu-bottom">
+    <ul id="navigation">
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li class="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </div>
+</div>
 </body>
 </html>
