--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <div class="top-background">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="instagram-brand">
+        <img src="images/brand.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div id="login-button">
+        <h6>
+            Log in
+        </h6>
 
-  Oh yeah, did we mention it's free?
+        <img src="images/home.png">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="phone">
+        <img src="images/phones.png">
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="main-text">
+        <img src="images/frame.png" id="frame">
+        <h1>
+            Capture and Share <br> the World's Moments
+        </h1>
+        <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <br>
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+            <br>
+            Oh yeah, did we mention it's free?
+        </p>
 
-  &copy; 2014 Instagram
+        <img src="images/badge-android.png" id="badge-android">
+        <img src="images/badge-iphone.png" id="badge-iphone">
+
+    </div>
+
+    <div class="footer">
+        <span id="bottom-nav">
+            <b>About Us    Support    Blog    Press    API    Jobs    Privacy    Terms </b>
+        </span>
+        <span>
+            &copy; 2014 Instagram
+        </span>
+    </div>
+
 </body>
 </html>
