--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="pagewraper">
+	<div id="central">
+		<div id="phones" class="phonefloat">
+			<img src="images/phones.png" id="imgphones">
+		</div>
+		<div id="instagramtext" class="phonefloat">
+			<div class="centering">
+				<div id="instagram" class="instandlog">
+					<img src="images/brand.png">
+				</div>
+				<div id="login" class="instandlog">
+					<a href=""><img src="images/home.png">  Log in</a>
+				</div>
+			</div>
+			<div id="mainsection">
+				<h1 id="capture" class="textspace">Capture and Share the World's Moments</h1>
+				<p class="textspace lineh">Instagram is a fast, beautiful and fun way to share your life with friends and family.<br><br>
+				Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+				<br><br>Oh yeah, did we mention it's free?</p>
+				<div id="appstores" class="centering2">
+					<div class="instandlog">
+						<a href="#">
+							<img src="images/badge-iphone.png"/>
+						</a>
+					</div>
+					<div class="instandlog">
+						<a href="#">
+							<img src="images/badge-android.png"/>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer>
+	<div id="foot">
+		<nav class="fontstyle">
+			<a href="#">ABOUT US</a>
+			<a href="#">SUPPORT</a>
+			<a href="#">BLOG</a>
+			<a href="#">PRESS</a>
+			<a href="#">API</a>
+			<a href="#">JOBS</a>
+			<a href="#">PRIVACY</a>
+			<a href="#">TERMS</a>
+		</nav>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+		<span class="fontstyle">&copy; 2014 INSTAGRAM</span>
+	</div>
+	</footer>
+</div>
 </body>
 </html>
