--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="header-banner">
+    <div class="body-container">
+      <div class="column-left">
+        <img src="images/phones.png"
+      </div>
+      <div class="column-right">
+        <img src="images/brand.png">
+        <div id="login">
+          <img src="images/home.png">
+          &nbsp;
+          Login
+        </div>
 
-  Capture and Share the World's Moments
+        <div class="text-container">
+        <h2>Capture and Share<br> the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
+        <center>
+        <img src="images/badge-android.png">
+        &nbsp;
+        &nbsp;
+        <img src="images/badge-iphone.png">
+      </center>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      </div>
+      </div>
+  </div>
+</div>
+  <div class="footer">
+    About Us
+    &nbsp;
+    Support
+    &nbsp;
+    Blog
+    &nbsp;
+    Press
+    &nbsp;
+    API
+    &nbsp;
+    Jobs
+    &nbsp;
+    Privacy
+    &nbsp;
+    Terms
+  <span>&copy; 2014 Instagram</span>
+  </div>
 </body>
 </html>
