--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="header-banner">
 
-  Capture and Share the World's Moments
+    <div>
+      <div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <img src="images/phones.png" class="phones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div>
+        <img src="images/brand.png" class="brand">
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="login-button">
+        <img src="images/home.png"> Log in
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+    <div class="frame">
+        <img src="images/frame.png">
+    </div>
+
+    <div class="instagram">
+<div class="capture">
+        <strong> Capture and Share </br> the World's Moments </strong> </br>
+      </br>
+      </div>
+
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. </br></br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and
+        more. It's a new way to see the world.  </br> </br>
+        Oh yeah, did we mention it's free?
+
+    </div>
+</div>
+    <div class="badge-iphone">
+        <img src="images/badge-iphone.png">
+    </div>
+
+    <div class="badge-android">
+        <img src="images/badge-android.png">
+    </div></div>
+
+
+<div class="about">
+    About Us Support Blog Press API Jobs Privacy Terms
+</div>
+
+<div class="copyright">
+    ©2014 Instagram
+  </div>
+
 </body>
+
 </html>
