--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,18 +9,18 @@
   <link rel="stylesheet" href="css/main.css"/>
 </head>
 
-<body>
 
-  <header id = "blueBg">
-    <nav>
-      <span id = "logo"><a href = "http://www.instagram.com">Instagram Logo here</a></span>
-      <span id = "button"><a href = "http://www.instagram.com">Home</a></span>
-    </nav>
-  </header>
+
+<body>
+  <header id = "blueBg"></header>
 
 <article>
+  <nav class ="navinTainer">
+    <span id = "logo"><a href = "http://www.instagram.com"><img alt="Instagram Logo" src="./images/brand.png"></a></span>
+    <span id = "button"><a href = "http://www.instagram.com"><img src="./images/home.png">Log in</a></span>
+  </nav>
 
-  <aside>iPhone Picture here</aside>
+  <aside></aside>
 
   <section class ="shadowTainer">
     <h2>Capture and Share the World's Moments</h2>
