--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,7 +17,7 @@
 <article>
   <nav class ="navinTainer">
     <span id = "logo"><a href = "http://www.instagram.com"><img alt="Instagram Logo" src="./images/brand.png"></a></span>
-    <span id = "button"><a href = "http://www.instagram.com"><img src="./images/home.png">Log in</a></span>
+    <span id = "button"><a href = "http://www.instagram.com"><img alt="Login Home" src="./images/home.png">Log in</a></span>
   </nav>
 
   <aside></aside>
@@ -27,12 +27,13 @@
     <p>
       Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
     <br>
+    <br>
       Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     </p>
     <p>Oh yeah, did we mention it's free?</p>
     <div class = "downloadButt">
-      <a href = "https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.unifiedHome.badge&mt=8">Download on the App Store</a>
-      <a href = "https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DunifiedHome%26utm_medium%3Dbadge">Get it on Google Play</a>
+      <a href = "https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.unifiedHome.badge&mt=8"><img alt="Download at App Store" src="./images/badge-iphone.png"></a>
+      <a href = "https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DunifiedHome%26utm_medium%3Dbadge"><img alt="Download at Google Play" src="./images/badge-android.png"></a>
     </div>
   </section>
 </article>
