--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="wrapper">
+    <div class="bg-a">
+      <div class="b-global">
+        <img src="images/phones.png" alt="">
+        <div class="b-block">
+          <div class="b-header">
+            <img src="images/brand.png" alt="">
+            <button type="button" name="button">
+              <img src="images/home.png" alt="">
+              <span>Log in</span>
+            </button>
+          </div>
+          <div class="b-content">
+            <h1>Capture and Share</br>the World's Moments</h1>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <ul>
+              <li><a href="#"><img src="images/badge-android.png" alt=""></a></li>
+              <li><a href="#"><img src="images/badge-iphone.png" alt=""></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bg-b"></div>
+    <div class="bg-footer">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
 </body>
 </html>
